syntax = "proto3";

package grpc.lithology.v1;

service LithologyService {
  rpc ParseLithology(LithologyRequest) returns (LithologyResponse) {}
}

message LithologyRequest {
  string description = 1;
}

message LithologyResponse {
  repeated string soils = 1;
  string moisture = 2;
  string consistency = 3;
  string colour = 4;
}
